src/snapshots/avml__iomem__tests__merge_ranges.snap
---
source: src/iomem.rs
expression: "merge_ranges(vec![0..3, 3..6, 7..10, 12..15])"
---
[
  {
    "start": 0,
    "end": 6
  },
  {
    "start": 7,
    "end": 10
  },
  {
    "start": 12,
    "end": 15
  }
]
