src/snapshots/avml__iomem__tests__split_ranges-2.snap
---
source: src/iomem.rs
expression: "split_ranges(vec![0..30; 1], 7)"
---
[
  {
    "start": 0,
    "end": 7
  },
  {
    "start": 7,
    "end": 14
  },
  {
    "start": 14,
    "end": 21
  },
  {
    "start": 21,
    "end": 28
  },
  {
    "start": 28,
    "end": 30
  }
]
