src/snapshots/avml__iomem__tests__split_ranges-3.snap
---
source: src/iomem.rs
expression: "split_ranges(vec![0..10, 10..20, 20..30], 7)"
---
[
  {
    "start": 0,
    "end": 7
  },
  {
    "start": 7,
    "end": 10
  },
  {
    "start": 10,
    "end": 17
  },
  {
    "start": 17,
    "end": 20
  },
  {
    "start": 20,
    "end": 27
  },
  {
    "start": 27,
    "end": 30
  }
]
