src/snapshots/avml__iomem__tests__split_ranges.snap
---
source: src/iomem.rs
expression: "split_ranges(vec![0..30; 1], 10)"
---
[
  {
    "start": 0,
    "end": 10
  },
  {
    "start": 10,
    "end": 20
  },
  {
    "start": 20,
    "end": 30
  }
]
